--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/react-leaflet": "^3.0.0",
     "axios": "^1.6.4",
+    "dotenv": "^16.3.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
